[package]
name = "async-context"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project = "1.1.5"

[dev-dependencies]
async-executor = "1.11.0"
tokio = { version = "1.37.0", features = ["macros", "rt"] }
