[package]
name = "bloom-client-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.80"
bloom-client = { path = "../bloom-client" }
bloom-core = { path = "../bloom-core" }
bloom-html = { path = "../bloom-html" }
bloom-rsx = { version = "0.1.0", path = "../bloom-rsx" }
builder-pattern = "0.4.2"
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
