[package]
name = "bloom-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
bloom-core = { version = "0.1.0", path = "../bloom-core" }
bloom-html = { version = "0.1.0", path = "../bloom-html" }
futures-util = "0.3.30"
wasm-bindgen-futures = "0.4.42"
weak-table = "0.3.2"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "Node",
    "Document",
    "Window",
    "Text",
    "NamedNodeMap",
    "Attr",
    "NodeList",
    "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
