[package]
name = "bloom-client"
version = "0.1.0"
edition = "2021"
authors = ["Michel Smola <dev@michelsmola.de>"]
description = "Client-side rendering for bloom-core"
license = "MIT"
repository = "https://github.com/mismosmi/bloom/tree/main/bloom-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
bloom-core = { version = "0.1.2", path = "../bloom-core" }
bloom-html = { version = "0.1.1", path = "../bloom-html" }
futures-util = "0.3.30"
wasm-bindgen-futures = "0.4.42"
weak-table = "0.3.2"
web-sys = { version = "0.3", features = [
    "HtmlElement",
    "Node",
    "Document",
    "Window",
    "Text",
    "NamedNodeMap",
    "Attr",
    "NodeList",
    "console",
    "Comment",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
