[package]
name = "bloom-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.30", features = ["channel"] }
async-trait = "0.1.80"
async-context = { path = "../async-context" }
async-channel = "2.2.1"
pin-project = "1.1.5"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt"] }
