[package]
name = "bloom-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-core = { path = "../bloom-core" }
derive_builder = "0.20.0"
web-sys = { version = "0.3", features = ["Event", "HtmlElement"] }
weak-table = "0.3.2"
