[package]
name = "bloom-html"
version = "0.1.3"
edition = "2021"
authors = ["Michel Smola <dev@michelsmola.de>"]
license = "MIT"
description = "Provides the HtmlNode type for bloom-client and bloom-server"
repository = "https://github.com/mismosmi/bloom/tree/main/bloom-html"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-core = { version = "0.1.1", path = "../bloom-core" }
builder-pattern = "0.4.2"
derive_builder = "0.20.0"
web-sys = { version = "0.3", features = ["Event", "HtmlElement"] }
