[package]
name = "bloom-hybrid"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
bloom-core = { version = "0.1.0", path = "../bloom-core" }
bloom-html = { version = "0.1.0", path = "../bloom-html" }
web-sys = { version = "0.3.69", features = [
    "Node",
    "NodeList",
    "Element",
    "Text",
] }
