[package]
name = "bloom-macro"
version = "0.1.0"
edition = "2021"
authors = ["Michel Smola <dev@michelsmola.de>"]
license = "MIT"
description = "Procedural Macros for the bloom ecosystem"
repository = "https://github.com/mismosmi/bloom/tree/main/bloom-macro"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1", features = ["full", "extra-traits"] }
