[package]
name = "bloom-rsx"
version = "0.1.1"
edition = "2021"
authors = ["Michel Smola <dev@michelsmola.de>"]
license = "MIT"
description = "A JSX-like syntax for bloom"
repository = "https://github.com/mismosmi/bloom/tree/main/bloom-rsx"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "1"
syn-rsx = "0.9.0"
