[package]
name = "bloom-ssr"
version = "0.1.0"
edition = "2021"
authors = ["Michel Smola <dev@michelsmola.de>"]
license = "MIT"
description = "Server-side rendering for bloom-html"
repository = "https://github.com/mismosmi/bloom/tree/main/bloom-ssr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-html = { path = "../bloom-html" }
bloom-core = { path = "../bloom-core" }
futures-util = { version = "0.3.30", features = ["channel"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt"] }
